@@ -41,18 +41,10 @@
 extern char* strdup( const char* );
 #endif
 
-VrmlNodeType::VrmlNodeType(const char *nm, VrmlNode* (*creator)(VrmlScene *))
-{
-  d_refCount = 0;
-  d_name = strdup(nm ? nm : "<unnamed type>");
-  d_namespace = 0;
-  d_url = 0;
-  d_actualUrl = 0;
-  d_relative = 0;
-  d_creator = creator;
-  d_implementation = 0;
-  d_fieldsInitialized = false;
-}
+VrmlNodeType::VrmlNodeType(const char *nm, VrmlNode* (*creator)(VrmlScene *)):
+        d_refCount(0), d_name(strdup(nm ? nm : "<unnamed type>")),
+        d_namespace(0), d_url(0), d_actualUrl(0), d_relative(0),
+        d_creator(creator), d_fieldsInitialized(false) {}
 
 void destructFieldList( VrmlNodeType::FieldList &f )
 {
@@ -89,8 +81,6 @@ VrmlNodeType::~VrmlNodeType()
   destructFieldList( d_eventIns );
   destructFieldList( d_eventOuts );
   destructFieldList( d_fields );
-
-  delete d_implementation;
 }
 
 void VrmlNodeType::setScope(VrmlNamespace & createdIn)
@@ -101,7 +91,7 @@ void VrmlNodeType::setScope(VrmlNamespace & createdIn)
 
 void VrmlNodeType::setUrl(VrmlMFString * url, Doc2 const * relative)
 {
-    if (d_implementation) {
+    if (this->implNodes.getLength() > 0) {
         return; // Too late...
     }
     
@@ -195,13 +185,12 @@ VrmlNodeType::setFieldDefault(const char *fname, VrmlField const * defaultValue)
 void VrmlNodeType::fetchImplementation()
 {
   // Get the PROTO def from the url (relative to original scene url).
-  VrmlNodeType *proto = VrmlScene::readPROTO( d_url, d_relative );
+  VrmlNodeType * const proto = VrmlScene::readPROTO( d_url, d_relative );
   if (proto)
     {
       // check type of first node...
       // steal nodes without cloning
-      d_implementation = proto->d_implementation;
-      proto->d_implementation = 0;
+      this->implNodes = proto->implNodes;
 
       // Make sure we get all the IS maps by using the field
       // lists from the implementation rather than just the
@@ -232,9 +221,8 @@ void VrmlNodeType::fetchImplementation()
 }
 
 
-VrmlMFNode *VrmlNodeType::getImplementationNodes()
-{
-  if (! d_implementation && d_url)
+const VrmlMFNode & VrmlNodeType::getImplementationNodes() {
+  if ((this->implNodes.getLength() == 0) && d_url)
     fetchImplementation();
 
   // Now that the nodes are here, initialize any IS'd fields
@@ -301,7 +289,7 @@ VrmlMFNode *VrmlNodeType::getImplementationNodes()
       d_fieldsInitialized = true;
     }
     
-  return d_implementation; 
+  return this->implNodes;
 }
 
 
@@ -313,7 +301,9 @@ VrmlMFNode *VrmlNodeType::getImplementationNodes()
 
 VrmlNode *VrmlNodeType::firstNode()
 {
-  return d_implementation ? (*d_implementation)[0] : 0;
+    return (this->implNodes.getLength() > 0)
+            ? this->implNodes[0]
+            : 0;
 }
   
 VrmlField::VrmlFieldType
@@ -398,11 +388,7 @@ VrmlNodeType::fieldDefault(const char *fname) const
 void VrmlNodeType::addNode(VrmlNode * node)
 {
     // add node to list of implementation nodes
-    if (d_implementation) {
-        d_implementation->addNode(node);
-    } else {
-        d_implementation = new VrmlMFNode(1, &node);
-    }
+    this->implNodes.addNode(node);
 }
 
 void VrmlNodeType::addIS(const char *isFieldName,
